fix spacing price and information

--- a/assets/base.css
+++ b/assets/base.css
@@ -287,6 +287,7 @@ html.no-js .no-js-hidden {
 .isolate {
   position: relative;
   z-index: 0;
+  padding-bottom: 5rem;
 }
 
 .section + .section {
