--- a/assets/component-card.css
+++ b/assets/component-card.css
@@ -311,6 +311,9 @@
 .card--standard > .card__content .card__information {
   padding-left: 0;
   padding-right: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .card--card.card--media .card__inner .card__information,
